app-templates/asi-teaser/src/components/Layer/Layer.scss
@import '../../variables.scss';

$margin:  $side / 20;
$tile-glow: 0 0 $side / 4 $side / 25 white;
$tile-light: 0 0 $side / 5 $side / 5 white, inset 0 0  $side / 5 white;
$tile-flash:0 0 $side / 3 $side / 3.5 white, inset 0 0  $side / 2 white;

@keyframes tile-flash {
    0% {
        box-shadow: $tile-glow;
    }

    10% {
        box-shadow: $tile-flash;
    }

    100% {
        box-shadow: $tile-light;
    }
}

.asi-tile {
    width: $side - $margin * 2;
    height: $side - $margin * 2;
    border: $border solid white;
    box-shadow: $tile-glow;
    box-sizing: border-box;
    display: inline-block;
    margin: $margin;
    border-radius: $side / 15;
    opacity: .97;

    transition: transform 1.2s, box-shadow 1.7s;

    &:hover {
        transform: scale(.85);
        transition: transform .3s;
        box-shadow: $tile-light;
        animation: tile-flash .25s;
    }

    &-orange {
        background-color: $orange;
        background: linear-gradient(211deg, #f69934 0%, #fdca43 75%)
    }

    &-red {
        background-color: $red;
        background: linear-gradient(238deg, #be1a20 0%, #eb2c23 57%)
    }

    &-blue {
        background-color: $blue;
        background: linear-gradient(323deg, #10213f 0%, #164789 57%)
    }

    &-green {
        background-color: $green;
        background: linear-gradient(211deg, #84b450 0%, #c9df4f 75%)
    }
}

.asi-layer {
    position: relative;
    transform-style: preserve-3d;
    transform: translateZ($side * 1.5) rotateY(-45deg) translateX(-$side * 1.5);
    width: $side * 3;
    margin: auto;

    &-face {
        line-height: 0;
    }

    &-face-top {
        position: absolute;
        top: 0;
        left: 0;
        transform: translateY(-$side * 1.5) rotateX(90deg) translateY(-$side * 1.5);
    }

    &-face-right {
        position: absolute;
        top: 0;
        left: 0;
        transform:  translateZ(-$side * 1.5) rotateY(90deg) translateZ($side * 1.5);
    }
}

